[package]
name = "auris"
version = "0.1.2"
authors = ["Bradford Toney <bradford.toney@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple (incomplete) URI parser"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "5.1.1"

[dependencies.bumpalo]
version = "3.2.1"
features = ["collections"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "uri_parse"
harness = false

# [profile.release]
# debug = true