[package]
name = "auris"
version = "0.1.3"
authors = ["Bradford Toney <bradford.toney@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple (incomplete) URI parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "7"

[dev-dependencies]
criterion = "0.5"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "uri_parse"
harness = false

[profile.release]
debug = true